--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.0"
+    "@tailwindcss/vite": "^4.1.17",
+    "aos": "^2.3.4",
+    "astro": "^5.16.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "sass-embedded": "^1.93.3"
+    "sass": "^1.94.2",
+    "sass-embedded": "^1.93.3",
+    "stylelint": "^16.26.0",
+    "stylelint-config-recommended-scss": "^16.0.2",
+    "stylelint-config-standard": "^39.0.1"
   }
 }
