--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
     "@tailwindcss/vite": "^4.1.17",
     "aos": "^2.3.4",
     "astro": "^5.16.0",
