--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^2.1.4",
+    "@astrojs/ts-plugin": "^1.10.6",
     "@tailwindcss/vite": "^4.1.17",
     "aos": "^2.3.4",
     "astro": "^5.16.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "sass": "^1.94.2",
     "sass-embedded": "^1.93.3",
     "stylelint": "^16.26.0",
